--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www --exec babel-node",
     "dev": "nodemon ./bin/www --exec babel-node",
     "server": "DEBUG=express-simple-restapi:* npm run dev"
   },
